@@ -5,7 +5,9 @@ import java.nio.ByteBuffer;
 import java.nio.channels.FileChannel;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -16,15 +18,19 @@ public class Compressor {
     private static final byte ZERO_BYTE = 0;
     private static final int BYTE_SIZE_IN_BITS = 8;
 
+    private static final int OFFSET_FOR_FILE_SIZE = 4;
+    private static final int OFFSET_FOR_LAST_BYTE_OFFSET = 8;
+
     /**
      * Offset value size for last byte
      */
     private static final int OFFSET_SIZE_IN_BYTES = 1;
     private static final int PREFIX_STRING_SIZE_IN_BYTES = 4;
+    private static final int FILE_SIZE_IN_BYTES = 4;
 
     public void compress(String path, String outputPath) throws IOException {
 
-        byte[] bytes = Files.readAllBytes(Path.of(path));
+        byte[] bytes = Files.readAllBytes(Paths.get(path));
         if (bytes.length == 0) {
             System.err.println("Error! File is empty!");
             return;
@@ -54,7 +60,6 @@ public class Compressor {
             pq.push(new QueueElement(new Node(el0.data, el1.data)));
         }
         Node rootNode = pq.pop().data;
-//        rootNode.abr();
         List<Byte> prefixString = rootNode.getPrefixString();
 
         Map<Byte, String> map = new HashMap<>();
@@ -64,35 +69,47 @@ public class Compressor {
             map.put(rootNode.symbol, String.valueOf(ZERO_BYTE));
         }
 
-        StringBuilder outputStringBuilder = new StringBuilder();
+        ByteBuffer outputBuffer = ByteBuffer.allocate(PREFIX_STRING_SIZE_IN_BYTES + FILE_SIZE_IN_BYTES + OFFSET_SIZE_IN_BYTES + prefixString.size() + bytes.length + 1);
 
-        for (byte aByte : bytes) {
-            outputStringBuilder.append(map.get(aByte));
-        }
-        String outputString = outputStringBuilder.toString();
-
-        ByteBuffer outputBuffer = ByteBuffer.allocate(PREFIX_STRING_SIZE_IN_BYTES + OFFSET_SIZE_IN_BYTES + prefixString.size() + outputString.length() / BYTE_SIZE_IN_BITS + 1);
-//        System.out.println("Output string size: " + outputString.length());
-//        System.out.println("Prefix string size: " + prefixString.size());
         outputBuffer.putInt(prefixString.size());
-        outputBuffer.put((byte) ((BYTE_SIZE_IN_BITS - outputString.length() % BYTE_SIZE_IN_BITS) % BYTE_SIZE_IN_BITS));
+        outputBuffer.putInt(0); //size of file
+        outputBuffer.put((byte) 0);
 
         for (Byte aByte : prefixString) {
             outputBuffer.put(aByte);
         }
 
-        for (int i = 0; i < outputString.length(); i += BYTE_SIZE_IN_BITS) {
-            String currentString = outputString.length() - i - 1 >= 8
-                ? outputString.substring(i, i + BYTE_SIZE_IN_BITS)
-                : outputString.substring(i);
-            if (!currentString.isEmpty()) {
-                byte current = (byte) (int) Integer.valueOf(currentString, 2);
+        String currentString = "";
+        int fileSize = 0;
+
+        for (int i = 0; i < bytes.length; i++) {
+            String encodedSymbol = map.get(bytes[i]);
+            currentString += encodedSymbol;
+            if (currentString.length() >= BYTE_SIZE_IN_BITS) {
+                String bytePart = currentString.substring(0, BYTE_SIZE_IN_BITS);
+                currentString = currentString.substring(BYTE_SIZE_IN_BITS);
+                byte current = (byte) (int) Integer.valueOf(bytePart, 2);
                 outputBuffer.put(current);
             }
+            fileSize++;
         }
+        if (!currentString.isEmpty()) {
+            int length = currentString.length();
+            byte offset = (byte) ((BYTE_SIZE_IN_BITS - length % BYTE_SIZE_IN_BITS) % BYTE_SIZE_IN_BITS);
+            for (int i = 0; i < BYTE_SIZE_IN_BITS - length; i++) {
+                currentString = '0' + currentString;
+            }
+            byte current = (byte) (int) Integer.valueOf(currentString, 2);
+            outputBuffer.put(current);
+
+            outputBuffer.put(OFFSET_FOR_LAST_BYTE_OFFSET, offset);
+
+        }
+        outputBuffer.putInt(OFFSET_FOR_FILE_SIZE, fileSize);
+
         outputBuffer.flip();
 
-        Path filePath = Path.of(outputPath);
+        Path filePath = Paths.get(outputPath);
 
         FileChannel fileChannel = FileChannel.open(filePath,
             StandardOpenOption.CREATE,
@@ -103,13 +120,14 @@ public class Compressor {
     }
 
     public void decompress(String path, String outputPath) throws IOException {
-        byte[] bytes = Files.readAllBytes(Path.of(path));
+        byte[] bytes = Files.readAllBytes(Paths.get(path));
         ByteBuffer inputBuffer = ByteBuffer.wrap(bytes);
         int prefixStringSize = inputBuffer.getInt();
+        int fileSize = inputBuffer.getInt();
         byte offset = inputBuffer.get();
         Node rootNode = new Node(inputBuffer, prefixStringSize);
         Node currentNode = rootNode;
-        List<Byte> output = new ArrayList<>();
+        ByteBuffer buffer = ByteBuffer.allocate(fileSize);
         while (inputBuffer.hasRemaining()) {
             byte b = inputBuffer.get();
             int lastByteOffset = inputBuffer.hasRemaining() ? 0 : offset;
@@ -120,7 +138,7 @@ public class Compressor {
 
                 if ((currentNode.right == null && currentNode.left == null) ||
                     (rootNode.right == null && rootNode.left == null)) {
-                    output.add(currentNode.symbol);
+                    buffer.put(currentNode.symbol);
                     currentNode = rootNode;
                 }
                 if (currentNode.right != null && currentNode.left != null) {
@@ -133,24 +151,19 @@ public class Compressor {
                 mask >>>= 1;
             }
         }
+        System.out.println(LocalDateTime.now() + " writing into buffer");
         if (rootNode.left != null && rootNode.right != null) {
-            output.add(currentNode.symbol);
+            buffer.put(currentNode.symbol);
         }
 
-
-        byte[] byteArray = new byte[output.size()];
-        for (int i = 0; i < output.size(); i++) {
-            byteArray[i] = output.get(i);
-        }
-        ByteBuffer buffer = ByteBuffer.wrap(byteArray);
-
-        Path filePath = Path.of(outputPath);
-
-        FileChannel fileChannel = FileChannel.open(filePath,
+        buffer.flip();
+        Path filePath = Paths.get(outputPath);
+        try (FileChannel fileChannel = FileChannel.open(filePath,
             StandardOpenOption.CREATE,
-            StandardOpenOption.WRITE
-        );
-        fileChannel.write(buffer);
-        fileChannel.close();
+            StandardOpenOption.WRITE)
+        ) {
+            fileChannel.write(buffer);
+        }
+
     }
 }
